# holdem-sim

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/holdem_sim/: holdem.py  poker_functions.py  sim_results.py  simulation.py
tests/: test_holdem_sim.py  test_poker_functions.py  test_simulation.py
