[tool.poetry]
name = "holdem_sim"
version = "0.1.0"
description = "Get probablilites, odds, and win expectations for holdem hands"
authors = ["Jay Cohen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
